--- a/index.html
+++ b/index.html
@@ -50,25 +50,34 @@
 <body>
     <div class="container">
         <h2>Bluesky DID Resolver</h2>
+        
         <div class="alert alert-info">
-            <strong>How to: </strong> input a bsky username to resolve its DID.
+            <strong>How to: input a bsky username (without the @) to resolve its DID.</strong>
+            <strong>Comment utiliser: tape ton nom d'utilisateur Bluesky (sans le @)</strong>
         </div>
         <form id="resolverForm">
             <input type="text" class="form-control" id="usernameInput" placeholder="Enter Bluesky username">
             <button class="btn btn-info" type="submit">Resolve DID</button>
         </form>
+        <br>
+        <hr>
         <div id="result"></div>
-
+        <br>
+        <hr>
 
                 <h2>Bluesky Post URI Resolver</h2>
         <div class="alert alert-info">
-            <strong>How to: </strong> input the full URL of a bsky post to resolve its URI.
+            <strong>How to: input the full URL of a bsky post to resolve its URI and use as Single Post within skyfeed.app </strong>
+            <strong>Comment faire: colle un lien direct vers un de tes posts sur bluesky pour en connaître le URI et l'utiliser comme Single Post dans skyfeed.app</strong>
         </div>
         <form id="postResolverForm">
             <input type="text" class="form-control" id="postIDInput" placeholder="Enter Post URL">
             <button class="btn btn-info" type="submit">Resolve Post URI</button>
         </form>
+        <br>
+        <hr>
         <div id="postResult"></div>
+        <br>
     </div>
 
     <script>
