--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2>Bluesky DID Resolver</h2>
         
         <div class="alert alert-info">
-            <strong>How to: input a bsky username (without the @) to resolve its DID.</strong>
+            <strong>How to: input a bsky username (without the @) to resolve its DID.</strong> <br>
             <strong>Comment utiliser: tape ton nom d'utilisateur Bluesky (sans le @)</strong>
         </div>
         <form id="resolverForm">
@@ -67,7 +67,7 @@
 
                 <h2>Bluesky Post URI Resolver</h2>
         <div class="alert alert-info">
-            <strong>How to: input the full URL of a bsky post to resolve its URI and use as Single Post within skyfeed.app </strong>
+            <strong>How to: input the full URL of a bsky post to resolve its URI and use as Single Post within skyfeed.app </strong> <br>
             <strong>Comment faire: colle un lien direct vers un de tes posts sur bluesky pour en connaître le URI et l'utiliser comme Single Post dans skyfeed.app</strong>
         </div>
         <form id="postResolverForm">
